propascript/grammar.txt

// tokens are if ( ) { } Number Identifier = * + print eos


Program -> Statements eof

Statements -> Statement eos Statements | ε

Statement -> "if" Expr { Statements } |
             Expr |
             print Expr

Expr -> AssignExpr

AssignExpr -> MinusExpr "=" Expr | MinusExpr

MinusExpr -> MulExpr "-" MinusExpr | MulExpr

MulExpr -> Value "*" MulExpr | MulExpr

Value = ( Expr ) | Identifier | Number
